--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,8 @@
 	</head>
 	<body class="standard">
 		<script type="text/javascript"> if (self != top) document.body.className = parent.document.getElementById('iframe').getAttribute('class'); </script>
-		<script type="text/javascript"> if (window.jQuery == undefined) document.write( unescape('%3Cscript src="js/jquery-1.6.4.min.js" type="text/javascript"%3E%3C/script%3E') ); </script>
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 		<script src="js/jquery.prettyPhoto.js" type="text/javascript"></script>
 		<script src="js/script.js" type="text/javascript"></script>
 		<script type="text/javascript">
