Update email address

--- a/contacts.html
+++ b/contacts.html
@@ -214,7 +214,7 @@
 								<ul>
 								<li class="icon_phone" title="téléphone">418-796-3168</li>
 								<li class="icon_fax" title="fax">418-796-3167</li>
-								<li class="icon_mail">v_labelarmoire@videotron.ca</li>
+								<li class="icon_mail">labelarmoire@videotron.ca</li>
 								<li class="icon_address">7070 Marie-Victorin Lotbinière, G0S 1S0</li>
 								</ul>
 							</div>
